@startuml

title __SERVICE's Class Diagram__\n

  namespace service {
    class service.ClientService {
        + ClientService()
        + addNewClient()
        + addNewRegion()
        + deleteClient()
        + deleteRegion()
        + searchRegionByName()
        + showAllClients()
        + showAllRegions()
    }
  }
  

  namespace service {
    class service.EmployerService {
        + EmployerService()
        + addNewEployer()
        + addPosition()
        + deleteEmployer()
        + deletePosition()
        + searchPositionByName()
        + showAllEmployers()
        + showAllPosition()
    }
  }
  

  namespace service {
    class service.IncidentService {
        + IncidentService()
        + showAllIncident()
        + showAllProduct()
    }
  }
  

  service.ClientService o-- dao.clientDAOImpl : model
  service.EmployerService o-- dao.EmployerDAOImpl : model
  service.IncidentService o-- dao.IncidentDAOImpl : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
